--- a/interface.css
+++ b/interface.css
@@ -12,6 +12,10 @@ font-size: 14px;
 user-select: none;
 background-color: black;
 }       
+#help {
+	color: white;
+	text-align: center;
+}
 .field {
 	border:solid black 1px;
 	width:50px;
@@ -27,6 +31,7 @@ canvas {
 	color:white;
 	text-align: center;
 	width: 100%;
+	bottom:0;
 	margin-top: 10%;
 	font-size: 3em;
 }
