--- a/interface.css
+++ b/interface.css
@@ -11,7 +11,43 @@ font-size: 14px;
 -ms-user-select: none;
 user-select: none;
 background-color: black;
+font-family: 'Anton', sans-serif;
 }       
+.panel {
+	position: absolute;
+	top:20%;
+	color: white;
+	height:70%;
+	width:80%;
+	left:10%;
+	background-color: black;
+	border-radius: 5em;
+	font-size: 1.5em;
+	z-index: 100;
+}
+.bold {
+	font-weight: bold;
+}
+#mute {
+	position: absolute;
+	right:3%;
+	top:3%;
+	color:white;
+	font-size: 2em;
+}
+#mute:hover {
+	background-color: rgba(255,255,255,0.3);
+}
+#pause {
+	position: absolute;
+	left:3%;
+	top:3%;
+	color:white;
+	font-size: 2em;
+}
+#pause:hover {
+	background-color: rgba(255,255,255,0.3);
+}
 #help {
 	color: white;
 	text-align: center;
@@ -27,12 +63,33 @@ canvas {
 	top: 0;
 	left: 0;
 }
+#Title {
+	position: absolute;
+	top:0;
+	font-size:4em;
+	left:0;
+	text-align: center;
+	width: 100%;
+	color:white; 
+}
+.123 {
+	margin-top: 20%;
+	margin-left:20%;
+	width:60%;
+}
+#cont {
+	margin-top: 20%;
+	margin-left:20%;
+	width:60%;
+
+}
+
 .msg {
 	color:white;
 	text-align: center;
 	width: 100%;
 	bottom:0;
-	margin-top: 10%;
+	margin-top: 20%;
 	font-size: 3em;
 }
 .but {
@@ -42,7 +99,7 @@ canvas {
 	padding:1em;
 	font-size: 1.5em;
 	color:white;
-	text-shadow:0em 0.05em 0em silver, 0em 0em 0.2em white;
+	/*text-shadow:0em 0.05em 0em silver, 0em 0em 0.2em white;*/
 	box-shadow:inset 0em 0em 5px 10px rgba(15,139,161,0.4);
 	
 }
